File containing parameters to configure the ATC programs.

--- a/Programs/parameters.cfg
+++ b/Programs/parameters.cfg
@@ -2,10 +2,13 @@
 
 ### File: StatisticalThesaurus.py
 # Max number of similar terms recorded in the XML file
-max_qty_terms=100
+max_qty_terms=2
 
 # Values of the threshold to syntactic contexts reduction (number of the minimum frequency of a syntactic context)
 min_freq_t3=1
+
+# Minimum size of a word to be computed
+min_word_size=3
 
 ### File: LSATheusaurs.py
 # Values of the number of dimensions to reduce the SVD (quantity of singular values)
